environments/dev/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin-dev
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 80
      targetPort: http
